--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 />
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="header-logo">
-                       <a href="#home"> <img src="assets/img/logo.png" alt="shara rose logo"></a> 
+                       <a href="#home"> <img src="./img/logo.png" alt="shara rose logo"></a> 
                     </div>
                     <ul class="nav" id="nav_items">
                         <li class="nav_link"><a href="#home">Home</a></li>
@@ -383,6 +383,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     
-    <script src="assets/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
