--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <div class="form-field">
                             <textarea name="message"  cols="30" placeholder="Message" required></textarea> 
                         </div>
-                        <button type ="submit" class="btn">send</button>
+                        <button type ="submit" class="btn">Send Message</button>
                     </form>
                 </div>
                
@@ -383,6 +383,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
