--- a/initialize_payment.html
+++ b/initialize_payment.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Input_amount</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header-logo">
           <a href="/index.html">
-            <img src="/img/logo.png" alt="logo image"
+            <img src="./img/logo.png" alt="logo image"
           /></a>
         </div>
       </div>
