--- a/initialize_payment.html
+++ b/initialize_payment.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div class="header-logo">
-          <a href="/index.html">
+          <a href="index.html">
             <img src="./img/logo.png" alt="logo image"
           /></a>
         </div>
