mediaqueries:initialize payment

--- a/index.html
+++ b/index.html
@@ -154,8 +154,6 @@
                 <div class="aboutus-img">
                     <img src="./img/megFounder.jpg" class="founder" alt="Natasha">
                     <div class="icons">
-                        <a href="www.facebook.com"><i class='bx bxl-facebook-circle'> </i></a>
-                        <a href="www.twitter.com"> <i class="bx bxl-twitter"></i></a>
                         <a href="https://www.instagram.com/shararose_artsfoundation/"><i class="bx bxl-instagram"></i></a>
                     </div>
                 </div>
@@ -236,7 +234,7 @@
                      <br>Collaborate.   
                 </p>
                 <div class="send-message">
-                    <form taget="_blank" action="https://formsubmit.co/a5b407c521dfdcfa1ad365dea3601cca" method="POST" >
+                    <form taget="_blank" action="https://formsubmit.co/el/yodaju" method="POST" >
                         <div class="form-field">
                             <input type="text" name="name" placeholder="Name:" required>
                         </div>
@@ -349,8 +347,6 @@
             <div class="contact-us">
                 <h3>Contact us:</h3>
                 <div class="contact-us-links">
-                    <a href="www.facebook.com"><i class='bx bxl-facebook-circle'> </i></a>
-                    <a href="www.twitter.com"> <i class="bx bxl-twitter"></i></a>
                     <a href="https://www.instagram.com/shararose_artsfoundation/"><i class="bx bxl-instagram"></i></a>
                 </div>
             </div>
