--- a/initialize_payment.html
+++ b/initialize_payment.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="move-scroll">
+    <header class="position--header">
         <div class="container">
             <div class="header-wrap">
                 <div class="header-logo">
-                   <a href="index.html"> <img src="./img/logo.png" alt="shara rose logo"></a> 
+                   <a href="index.html"> <img src="./img/log.png" alt="shara rose logo"></a> 
                 </div>
             
             </div>
